# SwiftRender

./: .clang-format  .gitignore  CMakeLists.txt
Examples/: CMakeLists.txt
Examples/Scripts/Python/: Compress.py
Examples/Shaders/: CMakeLists.txt
Examples/Showcase/: CMakeLists.txt
Examples/Showcase/Source/: App.cpp
Examples/Utility/Include/: Parser.hpp
Examples/Utility/Source/: Parser.cpp  SceneHelper.cpp  Window.cpp
Include/: Swift.hpp  SwiftEnums.hpp  SwiftImgui.hpp  SwiftStructs.hpp
Include/Vulkan/: VulkanInit.hpp  VulkanRender.hpp  VulkanStructs.hpp  VulkanUtil.hpp
Source/: Swift.cpp
Source/Vulkan/: VulkanInit.cpp  VulkanRender.cpp  VulkanUtil.cpp
examples/: CMakeLists.txt
examples/assets/: CREDITS.txt  cathedral.glb
examples/cmake/: functions.cmake
examples/hello_cull/shaders/: hello_cull.slang  hello_cull_inc.slang  hzb.slang
examples/hello_cull/src/: main.cpp
examples/hello_grass/shaders/: hello_grass.slang  hello_grass_inc.slang
examples/hello_grass/src/: main.cpp
examples/hello_index_buffer/: CMakeLists.txt  hello_vertex_buffer.cpp
examples/hello_model/shaders/: hello_model.slang  hello_model_inc.slang
examples/hello_model/src/: main.cpp
examples/hello_pbr/shaders/: hello_pbr.slang  hello_pbr_inc.slang
examples/hello_pbr/src/: main.cpp
examples/hello_triangle/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.slang
examples/hello_triangle/shaders/: hello_triangle.slang
examples/hello_triangle/src/: main.cpp
examples/hello_vertex_buffer/: CMakeLists.txt  hello_index_buffer.cpp  hello_index_buffer.slang
examples/utility/: camera.cpp  camera.hpp  imgui.cpp  imgui.hpp  importer.cpp  importer.hpp  input.cpp  input.hpp  lights.hpp  mesh_renderer.hpp  shader_compiler.cpp  shader_compiler.hpp  window.cpp  window.hpp
examples/utils/: CMakeLists.txt
examples/utils/include/: file_io.hpp  utils.hpp  window.hpp
examples/utils/src/: file_io.cpp  window.cpp
inc/: enum_flags.hpp  swift.hpp  swift_buffer.hpp  swift_buffer_view.hpp  swift_builders.hpp  swift_command.hpp  swift_context.hpp  swift_descriptor.hpp  swift_heap.hpp  swift_macros.hpp  swift_queue.hpp  swift_resource.hpp  swift_sampler.hpp  swift_shader.hpp  swift_shader_data.hpp  swift_structs.hpp  swift_texture.hpp  swift_texture_view.hpp
inc/d3d12/: d3d12_buffer.hpp  d3d12_buffer_view.hpp  d3d12_command.hpp  d3d12_context.hpp  d3d12_descriptor.hpp  d3d12_heap.hpp  d3d12_queue.hpp  d3d12_resource.hpp  d3d12_sampler.hpp  d3d12_shader.hpp  d3d12_texture.hpp  d3d12_texture_view.hpp
inc/render_graph/: swift_render_graph.hpp
include/: swift.hpp  swift_structs.hpp
shaders/: gen_mips.slang  gen_shaders.py
src/: swift.cpp  swift_helpers.hpp  vulkan_helpers.hpp  vulkan_init.cpp  vulkan_init.hpp  vulkan_render.hpp  vulkan_structs.hpp  warnings.hpp
src/d3d12/: d3d12_buffer.cpp  d3d12_buffer_view.cpp  d3d12_command.cpp  d3d12_context.cpp  d3d12_descriptor.cpp  d3d12_heap.cpp  d3d12_helpers.hpp  d3d12_queue.cpp  d3d12_resource.cpp  d3d12_sampler.cpp  d3d12_shader.cpp  d3d12_swapchain.cpp  d3d12_swapchain.hpp  d3d12_texture.cpp  d3d12_texture_view.cpp
src/render_graph/: swift_render_graph.cpp
